dms.css
html {
    font-size: 125%;
    font-family: "Charis SIL", "Bitstream Charter",
      "Georgia", serif;
    line-height: 1.5em;
    height: 100%;
}

* {
    margin: 0;
}

* + * {
    margin-top: 0.6rem;
}

body {
    margin: 0;
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

main {
    margin: 0;
    flex-grow: 1;
    /* This allows the footer to always be at the bottom of the viewport
   even if `main`’s content is very short */
}

article {
    margin: 1rem;
}

p, li, dd, blockquote {
    max-width: 28rem;
    line-height: 1.2em;
}

ul, ol {
    list-style: inside;
    padding: 0;
}

p img,
li img,
dd img,
blockquote img {
    vertical-align: middle;
}

pre, code, kbd, var {
    font-family: "Consolas", "Menlo",
      "Source Code Pro", "Ubuntu Mono", monospace;
    font-size: 90%;
    white-space: pre-wrap;
}

code dfn, .k, .ow {
    font-style: normal;
    font-weight: bold;
    font-family: "TeX Gyre Pagella", "TeX Palladio",
      "Palatino", "Palatino Linotype", serif;
}

code var, .n, .nb, .bp, .nf {
    font-family: "TeX Gyre Pagella", "TeX Palladio",
      "Palatino", "Palatino Linotype", serif;
    font-size: 100%;
}

a {
    color: inherit;
}

a:hover {
    color: rgb(111, 78, 55);
}

time {
    font-weight: bold;
    font-family: "TeX Gyre Pagella", "TeX Palladio",
      "Palatino", "Palatino Linotype", serif;
    font-size: 80%;
}

[role="heading"] p {
    font-size: 150%;
    text-align: center;
}

p[role="heading"] {
    margin-top: 1rem;
    font-weight: bold;
}

p[role="heading"] + p {
    margin-top: 1rem;
}

.dms_leading-banner {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    background-color: black;
    color: white;
}

.dms_leading-banner a {
    text-decoration: none;
}

.dms_card {
    outline: 1px solid rgb(229, 228, 226);
    min-width: 16rem;
    min-height: 9.6rem;
    /* Unless the content makes it grow, this container will have the
   aspect ratio and the relative dimensions of a business card. */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: rgba(255, 255, 255, 0.8);
}

.dms_look-across {
    align-self: stretch;
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
}

.dms_look-across > * {
    margin: 0;
}

.dms_logo {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.dms_logo img {
    width: 4rem;
}

.dms_contact-info p img,
.dms_contact-info li img,
.dms_contact-info dd img,
.dms_contact-info blockquote img {
    max-width: 1rem;
}

.dms_cover-page {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-around;
    flex-wrap: wrap;
    background-image: url("cpbg.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    background-position: bottom right;
}

.dms_see-through {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
    margin-top: 2rem;
    margin-bottom: 2rem;
    /*background-color: rgba(255, 255, 255, 0.6);*/
}

.dms_over-photographic {
    color: white;
    text-shadow: 1px 0px 0 black;
}

.dms_big-statement {
    font-size: 200%;
    text-align: center;
}

.dms_context-leaders {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-around;
    flex-wrap: wrap;
}

.dms_context-leaders [role="heading"] p {
    color: rgb(111, 78, 55);
}

.dms_plate {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-around;
    flex-wrap: wrap;
}

.dms_plate > header {
    margin: 0;
    background-color: rgb(229, 228, 226);
}

.dms_card-list {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    flex-wrap: wrap;
}

.dms_plate [role="heading"] p {
    margin-top: 1rem;
    margin-bottom: 1rem;
    font-size: 200%;
}

.dms_page-topic {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-wrap: wrap;
}

.dms_saying {
    font-family: "TeX Gyre Pagella", "TeX Palladio",
      "Palatino", "Palatino Linotype", serif;
    font-style: italic;
    color: rgb(111, 78, 55);
}

[role="heading"] .dms_saying {
    font-size: 100%;
}

.dms_proposition {
    font-family: "TeX Gyre Pagella", "TeX Palladio",
      "Palatino", "Palatino Linotype", serif;
    font-size: 80%;
    line-height: 1.5em;
}

.dms_read-more {
    color: white;
    background-color: rgb(111, 78, 55);
    font-family: "TeX Gyre Pagella", "TeX Palladio",
      "Palatino", "Palatino Linotype", serif;
    font-size: 80%;
    text-decoration: none;
    padding: 0 0.5ex 0 0.5ex;
}

.dms_read-more:hover {
    color: rgb(111, 78, 55);
    background-color: inherit;
}

.dms_flow-stamp {
    color: gray;
}

.dms_multiline-proglang {
    max-width: 36rem;
}

.dms_box-drawing {
    font-size: 1.2rem;
    line-height: 1em;
}

p[role="heading"] + p.dms_post-heading-addendum {
    margin-top: 0;
}

